test/sema/typeck/lambda/variadic-fixed-missing.dora
fn f(sum: (Int32, String...): Int64): Int64 {
    sum()
}
